# MLExp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
mlexp/_types/: __init__.py  converter.py  recursive_types.py
mlexp/experiment/: __init__.py  runner.py
mlexp/layers/: __init__.py
mlexp/layers/activation/: __init__.py  squared_relu.py
mlexp/train/: __init__.py  basic_loop.py
mlexp/utils/data/: __init__.py  dataloader.py
mlexp/utils/reproducibility/: __init__.py  restrict_torch.py  seed.py
tests/: test_mlexp.py
tests/_types/: test_converter.py
tests/experiment/: test_runner.py
tests/layers/: test_activation.py
tests/train/: test_basic_loop.py
tests/utils/: test_data_dataloader.py
