[tool.poetry]
name = "MLExp"
version = "0.1.0"
description = "resources for machine learning experiment"
license = "MIT"
authors = ["OtsuKotsu"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.9.1"
torchvision = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.9b0"
mypy = "^0.910"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
